Fixes for tree item level, setsize and posinset

BUG=722530

Review-Url: https://codereview.chromium.org/2886963004
Cr-Commit-Position: refs/heads/master@{#473455}

Former-commit-id: f9ebe04352bf2dc7adc827b9932a5685e4aa8c60