content/shell/test_runner/web_ax_object_proxy.cc
@@ -626,6 +626,7 @@ gin::ObjectTemplateBuilder WebAXObjectProxy::GetObjectTemplateBuilder(
       .SetProperty("relevant", &WebAXObjectProxy::Relevant)
       .SetProperty("roleDescription", &WebAXObjectProxy::RoleDescription)
       .SetProperty("sort", &WebAXObjectProxy::Sort)
+      .SetProperty("hierarchicalLevel", &WebAXObjectProxy::HierarchicalLevel)
       .SetProperty("posInSet", &WebAXObjectProxy::PosInSet)
       .SetProperty("setSize", &WebAXObjectProxy::SetSize)
       .SetProperty("clickPointX", &WebAXObjectProxy::ClickPointX)
@@ -1196,6 +1197,11 @@ std::string WebAXObjectProxy::Sort() {
     default:
       return std::string();
   }
+}
+
+int WebAXObjectProxy::HierarchicalLevel() {
+  accessibility_object_.UpdateLayoutAndCheckValidity();
+  return accessibility_object_.HierarchicalLevel();
 }
 
 int WebAXObjectProxy::PosInSet() {
